--- a/Final Deliverables/templates/login.html
+++ b/Final Deliverables/templates/login.html
@@ -32,24 +32,24 @@
   <form action="",method='POST'>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <div>
-        <a class="navbar-brand" href="#" style="color:aliceblue">DR Register</a>
+        <a class="navbar-brand" href="#" style="color:aliceblue">User Login</a>
         </div>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarNav">
           <ul class="navbar-nav mr-auto text-center" id="navbarRight">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html" style="color: aliceblue;">Home </a>
+              <a class="nav-link" href="index" style="color: aliceblue;">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html" style="color: aliceblue;">Login</a>
+              <a class="nav-link" href="login" style="color: aliceblue;">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="register.html"style="color: aliceblue;">Register</a>
+              <a class="nav-link" href="register"style="color: aliceblue;">Register</a>
             </li>
           </ul>
         </div>
       </nav>
       <br><br>
-      <form class="form-inline">
+      <form class="form-inline" action="/login" method="GET">
       <div class="container" style="width: 600px; height: 600px;">
         <div class="mb-3 d-flex justify-content-center"><script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
             <lord-icon
@@ -57,7 +57,6 @@
                 trigger="hover"
                 style="width:200px;height:200px">
             </lord-icon></div>
-
             <div class="mb-3">
                 <input type="email" class="form-control" id="exampleInputEmail1" name="mail" aria-describedby="emailHelp" placeholder="Enter Registered Mail ID">
               </div>
@@ -65,8 +64,9 @@
                 <input type="password" class="form-control" id="exampleInputPassword1" name="pass" placeholder="Enter Password">
               </div>
               <div class="mb-3">
-              <button type="submit form-control" class="btn btn-dark btn-primary" style="width:100%;">Login</button>
+              <button type="submit form-control" class="btn btn-dark btn-primary" style="width:100%;" type="submit">Login</button>
             </div>
+            {{pred}}
       </div>
     </form>
   </body>
