--- a/Final Deliverables/templates/logout.html
+++ b/Final Deliverables/templates/logout.html
@@ -36,13 +36,13 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarNav">
           <ul class="navbar-nav mr-auto text-center" id="navbarRight">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html" style="color: aliceblue;">Home </a>
+              <a class="nav-link" href="index" style="color: aliceblue;">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html" style="color: aliceblue;">Login</a>
+              <a class="nav-link" href="login" style="color: aliceblue;">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="register.html"style="color: aliceblue;">Register</a>
+              <a class="nav-link" href="register"style="color: aliceblue;">Register</a>
             </li>
           </ul>
         </div>
@@ -52,7 +52,7 @@
         <div class="row d-flex display-3 justify-content-center">
             Successfully Logged Out!
             <br><br>
-            <a href="login.html" class="btn btn-lg btn-dark">Login for more Information</a>
+            <a href="login" class="btn btn-lg btn-dark">Login for more Information</a>
               </div>
         </div>
   </body>
