--- a/Final Deliverables/templates/register.html
+++ b/Final Deliverables/templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <! -- CSS only -->
+    <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,18 +32,18 @@
   <form action="{{url_for('register')}}" method="post" >
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <div>
-        <a class="navbar-brand" href="#" style="color:aliceblue">DR Register</a>
+        <a class="navbar-brand" href="#" style="color:aliceblue">Registration</a>
         </div>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarNav">
           <ul class="navbar-nav mr-auto text-center" id="navbarRight">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html" style="color: aliceblue;">Home </a>
+              <a class="nav-link" href="index" style="color: aliceblue;">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html" style="color: aliceblue;">Login</a>
+              <a class="nav-link" href="login" style="color: aliceblue;">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="register.html"style="color: aliceblue;">Register</a>
+              <a class="nav-link" href="register"style="color: aliceblue;">Register</a>
             </li>
           </ul>
         </div>
@@ -72,9 +72,10 @@
               <div class="mb-3">
               <button type="submit form-control" class="btn btn-dark btn-primary" style="width:100%;">Register</button>
             </div>
-			<div class="mb-3 d-flex justify-content-center">Already Registered: &nbsp;&nbsp;&nbsp;
-        <a href="login.html" class="nav-link">  Login Here</a>
+			<div class="mb-3 d-flex justify-content-center">
+			<a href="login" class="nav-link"> Already Registered: Login Here</a>
       </div>
+      {{pred}}
       </div>
     </form>
   </body>
